--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
   box-sizing: border-box;
 }
 body {
-  font-family: 'Poppins', sans-serif;
-  background-color: #090909;
+  font-family: sans-serif;
+  background-color: #1a1919;
   padding: 50px;
 }
 /* General styles end */
@@ -60,7 +60,6 @@ body {
   }
 }
 
-
 * {
   margin: 0;
   padding: 0;
@@ -69,17 +68,13 @@ body {
 html {
   font-size: 62.5%;
 }
-body {
-  font-family: sans-serif;
-  font-size: 1.6rem;
-  background-color: #12131C;
-}
+
 i {
   font-size: 2.4rem;
 }
 .footer {
   padding-block: 5rem;
-  background-color: #151823;
+  background-color: #111213;
   color: #666873;
 }
 .footer__container {
@@ -90,8 +85,7 @@ i {
 
 .footer__top {
   display: grid;
-  grid-template-columns: 
-  repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   row-gap: 2rem;
 }
 .footer__title {
@@ -111,7 +105,7 @@ i {
 .footer__list-link {
   text-decoration: none;
   color: inherit;
-  transition: color .25s;
+  transition: color 0.25s;
 }
 .footer__list-link:hover {
   color: #fff;
@@ -135,6 +129,6 @@ i {
 }
 @media screen and (min-width: 40em) {
   .company__info {
-      grid-column: span 2;
+    grid-column: span 2;
   }
 }
